--- a/guestbook/values.yaml
+++ b/guestbook/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 2
 
 image:
-  repository: gcr.io/heptio-images/ks-guestbook-demo
-  tag: 0.2
+  repository: jenkins/jenkins:jdk21
+  #tag: 0.2
   pullPolicy: IfNotPresent
 
 service:
